[package]
name = "check_sys"
version = "0.1.0"
edition = "2021"
author = "Dawn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
reqwest = "0.12.4"
sysinfo = "0.30.11"
tokio = {version="1.37.0", features=["full"]}
futures = "0.3.30"
urlencoding = "2.1.3"
dotenv = "0.15.0"
